k8s/backend/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: backend
spec:
  selector:
    app: backend

  ports:
    - name: web
      protocol: TCP
      port: 8080
      targetPort: 8080
