k8s/backend/backend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: backend

spec:
  to:
    kind: Service
    name: backend

  port:
    targetPort: 8080
